[RD-FFK-NET8] Added to gitignore the rider files, the Visual Studio files and the nuget packages. fairmat/dev/fairmatserver#3493

--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,13 @@ UpgradeLog*.XML
 *.lock
 /.vs/CommodityModels/FileContentIndex/479974dd-8815-4f59-a6fd-3714735c06c5.vsidx
 *.vsidx
+
+# JetBrains Rider
+.idea/
+*.sln.iml
+
+# Nuget files
+packages/
+
+# Visual Studio folder
+.vs/
