--- a/OrnsteinUhlenbeck/OrnsteinUhlenbeck.csproj
+++ b/OrnsteinUhlenbeck/OrnsteinUhlenbeck.csproj
@@ -32,9 +32,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Mono.Addins">
-      <Version>1.4.1</Version>
-    </PackageReference>
+    <PackageReference Include="Mono.Addins" Version="1.4.1" />
     <PackageReference Include="System.Collections.Immutable" Version="8.0.0" />
     <PackageReference Include="System.Memory" Version="4.5.5" />
     <PackageReference Include="System.Numerics.Vectors" Version="4.5.0" />
