--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -11,7 +11,14 @@
     </PropertyGroup>
 
     <ItemGroup Label="FairmatDeps">
-        <!-- Inser here the Fairmat dependencies -->
+        <!-- DVPL references -->
+        <PackageVersion Include="Fairmat.Dvpl.CoreExtensions" Version="$(FairmatDepsVersion)" />
+        <PackageVersion Include="Fairmat.Dvpl.DVPLDOM" Version="$(FairmatDepsVersion)" />
+        <PackageVersion Include="Fairmat.Dvpl.DVPLDOME" Version="$(FairmatDepsVersion)" />
+        <PackageVersion Include="Fairmat.Dvpl.DVPLI" Version="$(FairmatDepsVersion)" />
+        <PackageVersion Include="Fairmat.Dvpl.DVPLInterfaces" Version="$(FairmatDepsVersion)" />
+        <PackageVersion Include="Fairmat.Dvpl.Fairmat.Optimization" Version="$(FairmatDepsVersion)" />
+        <PackageVersion Include="Fairmat.Dvpl.DVPLUtils" Version="$(FairmatDepsVersion)" />
     </ItemGroup>
 
     <ItemGroup>
